<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="prefLocation"
            type="jakeybakes.com.weather.location.PrefLocation" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/conLay_myLoc_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LocationsLibraryActivity">

        <TextView
            android:id="@+id/txtv_myLoc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/myloc_my_locations"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtv_myLoc_pageInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="6sp"
            android:text="@string/tap_the_location_you_want_weather_for"
            android:textAlignment="center"
            android:textColor="@color/half_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtv_myLoc_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcyv_myLoc_locList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_myLoc_entryShow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtv_myLoc_pageInstruction" />

        <Button
            android:id="@+id/btn_myLoc_entryEdit"
            android:layout_width="104dp"
            android:layout_height="35dp"
            android:layout_marginEnd="4dp"
            android:onClick="myLocEntryEdit"
            android:includeFontPadding="false"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="@+id/btn_myLoc_entryRemove"
            app:layout_constraintEnd_toStartOf="@+id/gdln_myLoc_v50"
            app:layout_constraintTop_toTopOf="@+id/btn_myLoc_entryRemove" />

        <Button
            android:id="@+id/btn_myLoc_entryRemove"
            android:layout_width="104dp"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="16dp"
            android:onClick="myLocEntryRemove"
            android:includeFontPadding="false"
            android:text="@string/remove"
            app:layout_constraintBottom_toTopOf="@+id/btn_myLoc_backToMap"
            app:layout_constraintStart_toStartOf="@+id/gdln_myLoc_v50" />

        <Button
            android:id="@+id/btn_myLoc_entryShow"
            android:layout_width="216dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:onClick="myLocEntryShowWeather"
            android:includeFontPadding="false"
            android:text="@string/get_weather"
            app:layout_constraintBottom_toTopOf="@+id/btn_myLoc_entryRemove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_myLoc_backToMap"
            style="@style/optionButtons"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/select_location_from_map"
            app:layout_constraintBottom_toTopOf="@+id/btn_myLoc_backToWeather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_myLoc_backToWeather"
            style="@style/optionButtons"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back_to_current"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/gdln_myLoc_v50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <Button
            android:id="@+id/btn_myloc_entryEditSave"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:includeFontPadding="false"
            android:text="@string/save"
            android:onClick="myLocEntryEditSave"
            app:layout_constraintBottom_toTopOf="@+id/btn_myLoc_backToMap"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edtx_myLoc_editNewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_myloc_entryEditSave"
            app:layout_constraintEnd_toStartOf="@+id/btn_myloc_entryEditSave"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtv_myLoc_entryEditInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:text="@string/edit_name_for_this_location"
            android:textColor="@color/half_white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_myloc_entryEditSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>